[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sacapi"
version = "1.0.0"
description = "An example package for exporting data from SAP Analytics Cloud or importing data into it, or working with it in Python tools"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

dependencies = [
  "oauthlib >= 3.2.2",
  "requests_oauthlib >= 1.3.1",
]

authors = [
  { name="David Stocker", email="david.stocker@sap.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SAP-samples/analytics-cloud-export-api-wrapper"
"Bug Tracker" = "https://github.com/SAP-samples/analytics-cloud-export-api-wrapper/issues"

# SPDX-FileCopyrightText: 2023 SAP SE or an SAP affiliate company <david.stocker@sap.com>
#
# SPDX-License-Identifier: Apache-2.0